attribution de la prime au meilleur vendeur lors du reset de la compta